# helvox

./: .gitignore  LICENSE  README.md  macos.spec  pyproject.toml  requirements.txt  windows.spec
.github/workflows/: release-windows.yml
recordings/: test.flac
recordings/claudio/: test.flac
src/helvox/: __main__.py  app.py  main.py
src/helvox/ui/: auto_resize_text.py  button.py  rounded_canvas.py  settings.py
src/helvox/utils/: audio.py  data.py  platform.py  recorder.py  trim.py
